@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST distribution-0.5.0.gem 38912 RMD160 91ca36e5515c17592d90c3f23a968be2fad81a34 SHA1 858d2e0f5c30a2d141d204c5b31354ea7809a591 SHA256 ea49f9cdfbada6a0597e329092e3c5574cf9ca959022de337e6bcf4190682dc7
 DIST distribution-0.6.0.gem 60416 RMD160 93c6d75f605e16fba3037ec62ddba8cb804a0543 SHA1 339bed152428aca9231129d8ea7650bf4298e754 SHA256 98bd00f34e9d725fc15c2a7faafc31aeb3ddece3cba132c516264d3f04d663cd
+DIST distribution-0.7.0.gem 951296 RMD160 ad4b74fefc5a440244e4849f3267be0d7a2f88f6 SHA1 ac7efa82a8003212494fde9001c5872351bccc28 SHA256 a6ceb1a5b67ca42f83188c3a288a2e1fb6ab65ca4ed44232f4fb9fff7672b888
 EBUILD distribution-0.5.0.ebuild 645 RMD160 26415dada7e4459ff39a83e747ffa84b04456898 SHA1 240c39837786c7a1174d7411d0d0881c3f477c98 SHA256 3efe14f053c6780e0691d4811bf16266b34667a4cb81af8b0040e20c872c7f11
 EBUILD distribution-0.6.0.ebuild 645 RMD160 26415dada7e4459ff39a83e747ffa84b04456898 SHA1 240c39837786c7a1174d7411d0d0881c3f477c98 SHA256 3efe14f053c6780e0691d4811bf16266b34667a4cb81af8b0040e20c872c7f11
-MISC ChangeLog 408 RMD160 0f47456035884f1fa1cba3ebe982698c8e6413d5 SHA1 7ce6ff6e6e9f7cab46aaf14b6a43f9315a4d0361 SHA256 153c2e18c3aed0f0e9467040275d8b252f2ca4d4ae8535fc0092f1b5fbd855a6
+EBUILD distribution-0.7.0.ebuild 645 RMD160 26415dada7e4459ff39a83e747ffa84b04456898 SHA1 240c39837786c7a1174d7411d0d0881c3f477c98 SHA256 3efe14f053c6780e0691d4811bf16266b34667a4cb81af8b0040e20c872c7f11
+MISC ChangeLog 538 RMD160 1f8ba715f4a33cd5fb47cf758d8c97a92c19dc85 SHA1 808aa3e3dc967327a7fb7892b8d6ca1f41625477 SHA256 6fe8a36778cdfa926f59f3c7e64f6e54a1d630764a7c1611fb42e6a3801193d2
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6VpvsACgkQiIP6VqMIqNcYhQD/U1OKuW4CI5FtujVZTGnw45Ot
-Qn2cc8xoU0t5vRkEZMMA/2/CIiip6R0vPkxn9wzdr+6vYndHX7yTpiwbRiHgECkn
-=cc3f
+iF4EAREIAAYFAk7qEIEACgkQiIP6VqMIqNdWngD/acsnlfIRJzzrtILsf2BwkE16
+fjE4qbzvvzV5j3jxrHUA/ixzQGrwrdbYj2t3/dqlXjmnOTmduvjwf57YzX9OVqpG
+=QSDw
 -----END PGP SIGNATURE-----
